# cto

./: .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHECKLIST.md  Dockerfile  FRONTEND_ENV_FIX.md  FRONTEND_INTEGRATION.md  FRONTEND_SETUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INBOX_INTAKE.md  INTEGRATION_GUIDE.md  MANIFEST.md  Makefile  PLANNING_DAILY_VIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_FRONTEND.md  README.md  START_HERE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_migration.py  001_initial_schema.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/core/: config.py  database.py  logging.py
app/llm/: __init__.py  base.py  claude_client.py  factory.py  openai_client.py
app/models/: __init__.py
app/repositories/: __init__.py  base.py  daily_summary.py  feedback.py  inbox_item.py  llm_call_log.py  plan_version.py  project.py  task.py  user.py
app/routers/: feedback.py  projects.py  tasks.py
app/schemas/: __init__.py  inbox.py  planning.py
app/services/: daily_planning_service.py  inbox_service.py  llm_service.py  planning_service.py
app/workers/: celery_app.py  tasks.py
examples/: 01_create_project.json  02_create_tasks.json  03_submit_feedback.json  04_project_level_feedback.json  README.md
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package.json
frontend/src/: App.tsx
scripts/: init_db.py  test_workflow.sh
tests/: conftest.py
tests/test_api/: test_inbox_endpoints.py  test_planning_endpoints.py
(+29 files in other folders)
